# audio-processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  compile.sh  feng_ap.node  index.js  package-lock.json  package.json  test.js  test.sh
include/: amr.h  bs.h  bs_read.h  denoise.h  mfcc.h  minimp3.h  napi_ampfreq.h  napi_amr.h  napi_audiofile.h  napi_common.h  napi_fft.h  napi_mfcc.h  napi_mp3.h  napi_pitch.h  napi_resample.h
src/: amr.cpp  denoise.cpp  example.cpp  mfcc.cpp  minimp3.cpp  napi_ampfreq.cpp  napi_amr.cpp  napi_audiofile.cpp  napi_common.cpp  napi_fft.cpp  napi_mfcc.cpp  napi_module.cpp  napi_mp3.cpp  napi_pitch.cpp  napi_resample.cpp
wav/: pen_with_silence.amr
